<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".DetailActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >


        <com.flaviofaria.kenburnsview.KenBurnsView
            android:id="@+id/movie_backgrund"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v7.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="123dp"
            android:layout_height="161dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="204dp"
            android:elevation="5dp"
            app:cardCornerRadius="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/movie_poster"
                android:contentDescription="@string/poster_img_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop" />
        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/movie_title"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            app:layout_constraintStart_toEndOf="@+id/cardView"
            app:layout_constraintTop_toBottomOf="@+id/movie_backgrund" />

        <TextView
            android:id="@+id/release_Date"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/movie_title"
            app:layout_constraintStart_toEndOf="@+id/cardView"
            app:layout_constraintTop_toBottomOf="@+id/movie_title" />


        <TextView
            android:id="@+id/movie_rating"
            android:layout_width="191dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/movie_title"
            android:layout_centerVertical="true"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/release_Date"
            app:layout_constraintTop_toBottomOf="@+id/release_Date" />

        <com.like.LikeButton
            android:id="@+id/favbtn"
            android:layout_width="32dp"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            app:anim_scale_factor="2.5"
            app:icon_size="25dp"
            app:icon_type="heart"
            app:layout_constraintBottom_toBottomOf="@+id/cardView"
            app:layout_constraintEnd_toEndOf="@+id/movie_rating"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/movie_rating"
            app:layout_constraintTop_toBottomOf="@+id/movie_rating"
            app:layout_constraintVertical_bias="0.0" />


        <android.support.v7.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="366dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="16dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp">

                <TextView
                    android:id="@+id/overView_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/overview_tv"
                    android:textAllCaps="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                <android.support.v4.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    app:layout_constraintTop_toTopOf="@+id/overView_text">

                    <TextView
                        android:id="@+id/movie-overview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:padding="5dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/overView_text"
                        app:layout_constraintVertical_bias="0.029" />
                </android.support.v4.widget.NestedScrollView>


            </android.support.constraint.ConstraintLayout>


        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/trailer_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/trailers_textview"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/trailer_recyclerview"
            app:layout_constraintStart_toStartOf="@+id/cardView2"
            app:layout_constraintTop_toBottomOf="@+id/cardView2"
            app:layout_constraintVertical_bias="0.0" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/trailer_recyclerview"
            android:layout_width="364dp"
            android:layout_height="140dp"
            android:layout_margin="8dp"
            android:layout_marginEnd="8dp"

            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="@+id/cardView2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/trailer_tv"
            app:layout_constraintTop_toBottomOf="@+id/trailer_tv"
            tools:listitem="@layout/trailer_items" />

        <TextView
            android:id="@+id/review_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/Review_description"
            android:text="@string/reviews_tv"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/trailer_recyclerview"
            app:layout_constraintStart_toStartOf="@+id/trailer_recyclerview"
            android:layout_marginTop="8dp"
            tools:layout_editor_absoluteY="557dp" />


        <android.support.v7.widget.RecyclerView
            android:id="@+id/review_recycle"
            android:layout_width="345dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/review_tv"
            tools:listitem="@layout/review_item_list" />

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_detail"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="10dp"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>
